<resources>
    <string name="app_name" translatable="false">PlaylistMaker</string>
    <string name="title_main">Playlist maker</string>

    <string name="button_search">Поиск</string>
    <string name="button_library">Медиатека</string>
    <string name="button_settings">Настройки</string>

    <string name="switch_themes">Темная тема</string>
    <string name="textview_share">Поделиться приложением</string>
    <string name="textview_support">Написать в поддержку</string>
    <string name="textview_arrowForward">Пользовательское соглашение</string>

    <!-- Поделиться приложением -->
    <string name="share_message">Смотри, что я нашел: %s</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer/</string>

    <!-- Письмо в поддержку -->
    <string name="support_email">proklb@ya.ru</string>
    <string name="support_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <!-- Пользовательское соглашение -->
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>

    <!-- Поиск -->
    <string name="search_hint">Поиск</string>
    <string name="search_content_description">Очистить поиск</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="update">Обновить</string>
    <string name="server_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <!-- Плейер -->
    <string name="media_trackTime">Длительность</string>
    <string name="media_collectionName">Альбом</string>
    <string name="media_releaseDate">Год</string>
    <string name="media_genreName">Жанр</string>
    <string name="media_country">Страна</string>
    <string name="media_progressText">00:00</string>

    <!-- Первый фрагмент и медиатека -->
    <string name="library_title">Медиатека</string>
    <string name="playlists_tab">Плейлисты</string>
    <string name="favorites_tab">Избранные треки</string>

    <string name="no_playlists_title">Вы не создали\nни одного плейлиста</string>
    <string name="no_favorites_title">Ваша медиатека пуста</string>
    <string name="create_playlist">Новый плейлист</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Создание плейлиста -->
    <string name="cover_image">Обложка плейлиста</string>
    <string name="name_playlist">Название*</string>
    <string name="description_playlist">Описание</string>
    <string name="create_playlist_button">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>

    <string name="playlist_duration_format">%s мин</string>
    <string name="share">Поделиться</string>
    <string name="menu">Меню</string>

    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>

    <string name="edit_playlist">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="empty_playlist_message">В плейлисте еще нет треков</string>

    <!-- PlaylistDetailsFragment -->
    <string name="share_playlist_empty">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist_error">Ошибка при подготовке данных для отправки</string>
    <string name="delete_playlist_confirm">Хотите удалить плейлист?</string>
    <string name="delete_track_confirm">Хотите удалить трек?</string>
    <string name="no">НЕТ</string>
    <string name="yes">ДА</string>
    <string name="share_playlist_chooser">Поделиться плейлистом</string>

    <!-- CreatePlaylistFragment -->
    <string name="create_playlist_error">Ошибка при создании плейлиста</string>
    <string name="finish_creation_title">Завершить создание плейлиста?</string>
    <string name="finish_creation_message">Все несохраненные данные будут потеряны</string>
    <string name="finish">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="playlist_created_with_name">Плейлист \"%s\" создан</string>
    <string name="playlist_created">Плейлист создан</string>

    <!-- EditPlaylistFragment -->
    <string name="save_playlist_error">Ошибка при сохранении плейлиста</string>
    <string name="playlist_saved_with_name">Плейлист \"%s\" сохранен</string>
    <string name="playlist_saved">Плейлист сохранен</string>

    <string name="track_added_to_playlist">Добавлено в плейлист %s</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="error_adding_to_playlist">Ошибка при добавлении в плейлист</string>

    <string name="track_single">трек</string>
    <string name="track_plural_2_4">трека</string>
    <string name="track_plural_5_more">треков</string>

    <string name="no_internet">Отсутствует подключение к интернету</string>

    <!-- AudioPlayerService -->
    <string name="notification_channel_name">Audio Player</string>
    <string name="notification_channel_description">Audio playback controls</string>
    <string name="notification_title">Playlist Maker</string>
    <string name="exception_no_track_for_notification">No track to show in notification</string>

</resources>