<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_main"
    android:orientation="vertical"
    style = "@style/LayoutStyle">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextAppearance="@style/MyTitleTextStyle"
        app:titleTextColor="@color/text_title_main"
        app:title="@string/title_main"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/button_search"
        app:icon="@drawable/search"
        style = "@style/ButtonStyle"
        android:layout_marginTop="24dp"/>
    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/button_library"
        app:icon="@drawable/library"
        style = "@style/ButtonStyle"/>
    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/button_settings"
        app:icon="@drawable/settings"
        style = "@style/ButtonStyle"/>

</LinearLayout>