<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_secondary">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/create_playlist"
        app:navigationIcon="@drawable/arrowback" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/createButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="@dimen/corner_radius_coverImage"
                    app:cardElevation="0dp"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/coverImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:background="@drawable/dashed_border"
                        android:src="@drawable/placeholder_newlist"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/cover_image" />

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="24dp"
                style="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_playlist"
                    android:textSize="16sp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingBottom="15dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                style="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_playlist"
                    android:paddingBottom="15dp"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:text="@string/create_playlist_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cornerRadius="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>